--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -182,6 +182,21 @@ a {
 
 }
 
+#contribute {    
+    .help {
+        font-size:14px;
+        color:@gray;
+    }
+
+    label {
+        font-weight:bold;
+    }
+
+    .required {
+        color:@red;
+    }
+}
+
 .sidebar {
     position:absolute;
     z-index:100;
