--- a/views/index.jade
+++ b/views/index.jade
@@ -12,7 +12,7 @@ block content
             blockquote
                 p <strong>Pour piloter une politique, il faut des données.</strong> Et en matière d’autisme, comme pour tout ce qui concerne nos concitoyens handicapés, <strong>les données sociodémographiques ou socio-économiques font défaut.</strong>
                 small
-                    | Christel Prado, <cite title="Le coût économique et social"><a href="http://www.lecese.fr/sites/default/files/pdf/Avis/2012/2012_17_autisme.pdf">Le coût économique et social</a></cite> [PDF]
+                    | Christel Prado, <cite title="Le coût économique et social de l'autisme"><a href="http://www.lecese.fr/sites/default/files/pdf/Avis/2012/2012_17_autisme.pdf">Le coût économique et social de l'autisme</a></cite> [PDF], octobre 2012
             p.top30
                 a.btn.btn-large(href="/contribuer")
                     i.icon-comment.right10
