--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -180,6 +180,10 @@ a {
         left:auto;                        
     }
 
+    .search_box {
+        padding-bottom:3px;
+    }
+
 }
 
 #contribute {    
