--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -202,7 +202,6 @@ footer {
 
 .sidebar, .legend {
     position:absolute;
-    left:1%;
     background:@red;
     color:@white;
     padding:20px;
@@ -212,7 +211,8 @@ footer {
 }
 
 .legend {    
-    bottom:1%;    
+    bottom:20px;
+    right:1%;    
     padding:10px;
     z-index:99;
     font-size:12px;
@@ -237,6 +237,7 @@ footer {
 
 .sidebar {
     top:@navbarHeight+4px;
+    left:1%;
     padding-top:0;
     z-index:100;
     width:500px;    
