--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8013,7 +8013,6 @@ footer {
 .sidebar,
 .legend {
   position: absolute;
-  left: 1%;
   background: #cf0609;
   color: #ffffff;
   padding: 20px;
@@ -8026,7 +8025,8 @@ footer {
   z-index: 100;
 }
 .legend {
-  bottom: 1%;
+  bottom: 20px;
+  right: 1%;
   padding: 10px;
   z-index: 99;
   font-size: 12px;
@@ -8051,6 +8051,7 @@ footer {
 }
 .sidebar {
   top: 49px;
+  left: 1%;
   padding-top: 0;
   z-index: 100;
   width: 500px;
