Added new legend dot color and photos credits

--- a/views/explorer.jade
+++ b/views/explorer.jade
@@ -80,7 +80,7 @@ block content
                 i.dot(style='background-color:#336699') 
                 | Pas encore d'information
             li
-                i.dot(style='background-color:#F9D654') 
+                i.dot(style='background-color:#90CA77') 
                 | Mois de 6 mois d'attente
             li
                 i.dot(style='background-color:#E9B64D') 
