--- a/views/contribuer.jade
+++ b/views/contribuer.jade
@@ -18,7 +18,7 @@ block content
                     .span6.offset1
                         label(for="entry_1551946547") 
                             | Dans quelle structure attendez-vous d'obtenir ou avez-vous obtenu une place ?
-                        p.help Les choix sont triés par département - Ville, No        
+                        p.help Les choix sont triés par département - Ville, Nom de la structure  
                         select#entry_1551946547(aria-required='true', name='entry.1551946547')
                             option(value='')
                             option(value='01 - Bourg En Bresse, IME HENRI LAFAY') 01 - Bourg En Bresse, IME HENRI LAFAY
