--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -65,20 +65,36 @@ footer {
 
 .home-banner {
     background:@red;
-    position:relative;
+    position:relative;    
     z-index:10;
     .box-shadow(0 0 20px 0 fade(black, 50%) );
 
-
-    .photos {
-        max-height:600px;   
-        @media (max-width: 767px) {
-            max-height:140px;
-        }     
+    .gallery  {
+        
+        position:absolute;
+        top:0;
+        bottom:0;
+        left:0;
+        right:50%;
+        
+        @media (max-width: 767px) {    
+            position:relative;
+            right:auto;
+        }
+        
+        .photos {
+            max-height:600px;
+            
+            @media (max-width: 767px) {
+                max-height:140px;
+            }     
+        }
     }
+
 
     .side-map {
         color:white;
+        padding-bottom:100px;
         
         h1 {
             border-top:4px solid white;
