--- a/views/layout.jade
+++ b/views/layout.jade
@@ -60,4 +60,13 @@ html.no-js
     script(src="/javascripts/vendor/bootstrap.min.js", type="text/javascript")
     block scripts
     
-        
+    script(type="text/javascript")
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-26208352-4']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
