--- a/views/index.jade
+++ b/views/index.jade
@@ -30,6 +30,6 @@ block content
                     | la formation des professionnels qui les accompagnent est-elle adéquate, 
                     | l'offre de soin et de prise en charge correspond-elle à la demande de la population autiste?
                 p
-                    | Des questions auxquelles "Des données pour l'autisme" a pour objectif de répondre.
+                    | Des questions auxquelles <strong>Des données pour l'autisme</strong> a pour objectif de répondre.
                     | Questionnaires en ligne, utilisation des données officielles, enquêtes journalistiques 
-                    | viendront progressivement enrichir une base de données mis en forme dans une carte interactive.
+                    | viendront progressivement enrichir une base de données mise en forme dans une carte interactive.
