--- a/views/explorer.jade
+++ b/views/explorer.jade
@@ -1,9 +1,9 @@
 extends layout
 
 block stylesheets
-    link(rel="stylesheet", href="//libs.cartodb.com/cartodb.js/v2/themes/css/cartodb.css")
+    link(rel="stylesheet", href="http://libs.cartodb.com/cartodb.js/v2/themes/css/cartodb.css")
     //if lt IE 8
-        link(rel="stylesheet", href="//libs.cartodb.com/cartodb.js/v2/themes/css/cartodb.ie.css")    
+        link(rel="stylesheet", href="http://libs.cartodb.com/cartodb.js/v2/themes/css/cartodb.ie.css")    
 
 block content
     #map
@@ -97,7 +97,7 @@ block content
 
 
 block scripts
-    script(src="//libs.cartocdn.com/cartodb.js/v2/cartodb.js")
+    script(src="http://libs.cartocdn.com/cartodb.js/v2/cartodb.js")
     script(src="/javascripts/explorer.js")
 
     script(type="infowindow/html", id="infowindow_template")
