Updated footer and map center

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,9 +46,8 @@ html.no-js
             .container.tc
                 p 
                   | <strong>Des données pour l'autisme</strong> est 
-                  | un projet de <a href="https://twitter.com/silveroux" target="_blank">Damien Brunon</a> 
-                  | développé par <a href="https://twitter.com/pirhoo" target="_blank">Pierre Romera</a>
-                  | et disponible <a href="https://github.com/jplusplus/desdonneespourlautisme" target="_blank">sur Github</a>.
+                  | un projet de <a href="https://twitter.com/silveroux" target="_blank">Damien Brunon</a>, 
+                  | disponible <a href="https://github.com/jplusplus/desdonneespourlautisme" target="_blank">sur Github</a>.
                 p
                   | Photos par <strong>Alain Elorza</strong>,
                   | en <a href="https://secure.flickr.com/photos/7876071@N06/sets/72157600088962420/with/499178992/" target="_blank">Creative Commons</a> 
