--- a/views/contribuer.jade
+++ b/views/contribuer.jade
@@ -10,7 +10,7 @@ block content
     #contribute.container
         .white-panel
             h1 Contribuez            
-            h2.ss-form-title(dir='ltr') Combien de temps pour obtenir une place dans une structure dédiées à l'autisme?
+            h2.ss-form-title(dir='ltr') Combien de temps pour obtenir une place dans une structure dédiée à l'autisme?
             form(target='_blank', method='POST', action='https://docs.google.com/forms/d/1vyHgX3stQZyOj3FS2_c6UiNgi3Els05tE806onQ7a5M/formResponse?embedded=true')            
                 .row-fluid.top20
                     .span5           
