--- a/views/explorer.jade
+++ b/views/explorer.jade
@@ -12,7 +12,7 @@ block content
         .toggle
             .row-fluid
                 .span6
-                    h3 Taille des centres
+                    h3 Taille des structures
                     label.checkbox
                         input(type='checkbox', name='places', checked='checked', data-places-min='0', data-places-max='4')
                         | Moins de 5 places
