--- a/views/contribuer.jade
+++ b/views/contribuer.jade
@@ -504,7 +504,7 @@ block content
                         p.help Si vous avez déjà obtenu une place, combien de temps cela a-t-il pris?
                         select#entry_1278557539(aria-required='true', name='entry.1278557539')
                             option(value='')
-                            option(value='Mois de 6 mois') Mois de 6 mois
+                            option(value='Moins de 6 mois') Moins de 6 mois
                             option(value='Plus de 6 mois') Plus de 6 mois
                             option(value='Plus de un an') Plus de un an
                             option(value='Plus de deux ans') Plus de deux ans
