Improved map popup

--- a/views/explorer.jade
+++ b/views/explorer.jade
@@ -109,6 +109,7 @@ block scripts
                     ul(class="popup-list")
                         li Année d'ouverture: <strong>{{content.data.annee_d_ouverture}}</strong>
                         li Nombre de places: <strong>{{content.data.nombre_de_places}}</strong>
+                    p {{content.data.adresse}}
 
             div(class="cartodb-popup-tip-container")
        
