--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -330,15 +330,25 @@ footer {
 }
 
 html body .cartodb-popup  {
+
     .popup-list {        
         list-style: none;
         margin: 0;
+        margin-top:10px;
         color: @black;
-        font-size: 10px;
+        font-size: 12px;
+    }
+
+    li {
+        line-height:15px;
     }
 
     h4, a {
         color:@red;
+    }
+
+    p {
+        margin-top:10px;
     }
 }
 
