--- a/views/explorer.jade
+++ b/views/explorer.jade
@@ -49,7 +49,7 @@ block content
 
             .row-fluid
                 .span6
-                    h3 Temps d'attente estimé
+                    h3 Temps d'attente enregistré
                     label.checkbox
                         input(type='checkbox', name='wait', checked='checked', data-wait-min='-1', data-wait-max='0')
                         | Pas encore de donnée
