Updated sylveroux twitter handle

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -46,7 +46,7 @@ html.no-js
             .container.tc
                 p 
                   | <strong>Des données pour l'autisme</strong> est 
-                  | un projet de <a href="https://twitter.com/silveroux" target="_blank">Damien Brunon</a>, 
+                  | un projet de <a href="https://twitter.com/dbrunon" target="_blank">Damien Brunon</a>, 
                   | disponible <a href="https://github.com/jplusplus/desdonneespourlautisme" target="_blank">sur Github</a>.
                 p
                   | Photos par <strong>Alain Elorza</strong>,
